# Added favicon # Fixed footer for Mobile # Fixed skills styling issue on mobile & desktop

--- a/public/styles.css
+++ b/public/styles.css
@@ -210,7 +210,11 @@ footer {
     padding: 1em 0;
     width: 100%;
     bottom: 0;
-    transition: background 0.3s, color 0.3s;
+    display: grid;
+    grid-template-columns: 40% 40%;
+    gap: 3em;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -225,6 +229,18 @@ footer {
 
 .contact-link:hover {
     opacity: 0.7;
+}
+
+.footer-container {
+    border: 2px solid var(--description-border-color);
+    padding: 1em;
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
 }
 
 /* projects section */
@@ -440,14 +456,16 @@ footer {
 /* Skills Section */
 
 #skills {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     background: var(--section-background);
     box-sizing: border-box;
-    padding: 20px;
     user-select: none;
     margin-bottom: 30px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    place-items: center;
 }
 
 .skill-bar {
@@ -481,7 +499,7 @@ footer {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 858px) {
     .nav-toggle {
         display: block;
         color: var(--header-text-color);
@@ -550,5 +568,17 @@ footer {
     #project-preview {
         width: 90%;
         padding: 20px;
+    }
+        
+    footer {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        place-items: center;
+        gap: 1em;
+    }
+
+    .footer-container {
+        width: 80%;
+        height: 30px;
     }
 }
